# learning_log

./: .env  .gitignore  pyproject.toml  requirements.txt
learning_log/: settings.py
learning_logs/: models.py  urls.py  views.py
learning_logs/migrations/: 0001_initial.py  0002_entry.py  0003_rename_title_entry_topic.py  0004_topic_owner.py
learning_logs/templates/learning_logs/: base.html  edit_entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
users/: urls.py  views.py
users/templates/registration/: logged_out.html  login.html  register.html
